# dbrca_backend

./: .env.example  ARCHITECTURE.md  CLAUDE.md  COMPLETION_CHECKLIST.md  DEEPAGENTS_CONFIRMATION.md  DEEPAGENTS_IMPLEMENTATION.md  INTEGRATION_VERIFICATION.md  LLM_INTEGRATION_SUMMARY.md  MULTI_DATABASE_SUPPORT.md  MULTI_LLM_COMPLETION.md  PERFORMANCE_TOOLS_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START_LLM.md  README.md  SUBAGENT_TOOLS_SUMMARY.md  SYNC_MODE_VERIFICATION.md  SYSTEM_SETUP.md  main.py  pyproject.toml  test_integration.py  test_setup.py  同步模式改造完成报告.md
app/: __init__.py  api.py
app/agents/: __init__.py  example_usage.py  main_agent.py  root_cause_analyzer.py
app/agents/subagents/: __init__.py  config_inspector.py  log_analyzer.py  performance_analyzer.py  query_analyzer.py
app/core/: __init__.py  config.py  database.py  database_types.py  llm_factory.py
app/router/: __init__.py  diagnostic.py
app/tools/: __init__.py  log_tools.py  performance_tools.py  query_tools.py
doc/: 00_START_HERE.md  ARCHITECTURE_REVIEW.md  DEBUG_GUIDE.md  FINAL_PROJECT_STRUCTURE.txt  INDEX.md  LOG_TOOLS_GUIDE.md  LOG_TOOLS_IMPLEMENTATION.md  MULTI_DATABASE_CHECKLIST.md  PERFORMANCE_TOOLS_GUIDE.md  PROJECT_SUMMARY.md  QUERY_TOOLS_GUIDE.md  QUERY_TOOLS_IMPLEMENTATION.md  README.md  SESSION_COMPLETION_SUMMARY.md  SUBAGENT_TOOLS_SUMMARY.md  SYNC_MODE_MIGRATION.md  USAGE_EXAMPLES.md
