[project]
name = "backend"
version = "0.1.0"
description = "MySQL RCA Multi-Agent System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.2",
    "fastapi>=0.136.1",
    "langchain-openai>=1.2.1",
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.49",
    "uuid6>=2025.0.1",
]
