[project]
name = "backend"
version = "0.1.0"
description = "Multi-Database RCA System using deepagents (MySQL, PostgreSQL, Informix, etc.)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.2",
    "fastapi>=0.136.1",
    "langchain-openai>=1.2.1",
    "sqlalchemy>=2.0.49",
    "uuid6>=2025.0.1",
    "pymysql>=1.1.0",  # MySQL driver
    "uvicorn>=0.27.0",  # ASGI server
]

[project.optional-dependencies]
# Additional database drivers
postgres = ["psycopg2-binary>=2.9.0"]
informix = ["pyodbc>=4.1.0"]
oracle = ["cx_oracle>=8.3.0"]
sqlserver = ["pymssql>=2.2.0"]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

# All database drivers
all-databases = [
    "psycopg2-binary>=2.9.0",  # PostgreSQL
    "pyodbc>=4.1.0",            # Informix/ODBC
    "cx_oracle>=8.3.0",         # Oracle
    "pymssql>=2.2.0",           # SQL Server
]
